apps/youtrack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: youtrack
  labels:
    app: youtrack
