apps/youtrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtrack-dp
  namespace: youtrack
  labels:
    app: youtrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtrack
  template:
    metadata:
      labels:
        app: youtrack
    spec:
      containers:
        - name: youtrack
          image: jetbrains/youtrack:2026.2.19422
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: youtrack-data
              mountPath: /opt/youtrack/data
            - name: youtrack-conf
              mountPath: /opt/youtrack/conf
            - name: youtrack-logs
              mountPath: /opt/youtrack/logs
            - name: youtrack-backups
              mountPath: /opt/youtrack/backups
      volumes:
        - name: youtrack-data
          hostPath:
            path: /mnt/ssd/app-data/youtrack/data/app
            type: DirectoryOrCreate
        - name: youtrack-conf
          hostPath:
            path: /mnt/ssd/app-data/youtrack/data/conf
            type: DirectoryOrCreate
        - name: youtrack-logs
          hostPath:
            path: /mnt/ssd/app-data/youtrack/data/logs
            type: DirectoryOrCreate
        - name: youtrack-backups
          hostPath:
            path: /mnt/ssd/app-data/youtrack/data/backups
            type: DirectoryOrCreate
