apps/youtrack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtrack-cip-svc
  namespace: youtrack
spec:
  selector:
    app: youtrack
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
