apps/youtrack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-https@kubernetescrd
  name: youtrack-ingress
  namespace: youtrack
spec:
  rules:
    - host: ENC[AES256_GCM,data:VOJx7jKmqOhnkGs9EcVXXCym+Gp34Lr8ecV/LA==,iv:Mc6ZSdxgJnP/1WXjYBPEvIoSSWUBpGSpqkxLPTTE8Nk=,tag:/PNzS0UCn1+VS8Gd65dleA==,type:str]
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: youtrack-cip-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - ENC[AES256_GCM,data:fVCMKFd1UJW3Lf6lVdPB9YiQMZ/WA0RW7Wn2SQ==,iv:/o5mcC1uKnIv3tSqsXw6PorIfhrEGSu6tgkeaMsBJ/s=,tag:eYRzbsveXoFtS273xF3QTA==,type:str]
      secretName: youtrack-cert
sops:
  lastmodified: "2026-04-25T11:45:15Z"
  mac: ENC[AES256_GCM,data:PIB5xcj8gAVU8TheehOymn+rhdUi4IKp11G1P74H83Sw9RayYPpcW/TPX/qUiIgRR1JWM7HamqynLgY1jH4tmmft+4qHxIAZmqpYY/ZtShA1e2fSMYJdEorK/TxxcKQ4IS5JpW3dg5nxu/mTYpY7FcDxb0k/g7SX/nBskh1iBVA=,iv:uC8PBF0sMwLAsjbiBiTVl/dO2HP5OplYGiGgUzHVuIw=,tag:SCqY93o6c3DiMfO57XCEjA==,type:str]
  pgp:
    - created_at: "2026-04-25T11:45:15Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        hQIMA1R72LzcpgpmAQ//TcNLIFMM1Hp9FMu10EyQT7mrg2ct9UK6EVjR1y0LkmUs
[...]
        =/l7k
        -----END PGP MESSAGE-----
      fp: 08083A92DBB719D2E10998259B44720A645D6802
  encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
  version: 3.12.2
